nginx-jwks.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-jwks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-jwks
  template:
    metadata:
      labels:
        app: nginx-jwks
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: jwks-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: jwks-volume
        configMap:
          name: jwks-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-jwks-service
spec:
  selector:
    app: nginx-jwks
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
